[project]
name = "transitstream-global"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-bigtable>=2.38.0",
    "google-cloud-pubsub>=2.39.0",
    "google-cloud-storage>=3.12.0",
    "gtfs-realtime-bindings>=2.0.0",
    "requests>=2.34.2",
]
